--- a/Client/Angular/src/styles.scss
+++ b/Client/Angular/src/styles.scss
@@ -1,1 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: url("https://images.unsplash.com/photo-1606963060170-09c3c2d12b71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+}
+
+.text-yellow {
+  color: rgba(255, 255, 0, 0.8);
+}
+
+.card {
+
+  position: relative;
+
+    &-img-top {
+      height: 16vh;
+      object-fit: cover;
+    }
+
+    p {
+      padding-bottom: 3em;
+    }
+
+    .btn {
+      position: absolute;
+      bottom: 1em;
+      right: 1em;
+    }
+  
+}
+
+* p {
+  font-size: 0.9em;
+}
