Server: swagger,yaml,docs. DB: hwdata jsons

--- a/Client/Angular/src/app/components/home/home.component.html
+++ b/Client/Angular/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="hero-wrapper d-flex align-items-center justify-content-center mb-5">
   <div class="mx-5 text-center text-yellow text-center">
-    <h1 class="">Let your dreams come true </h1>
+    <h1 class="title">Let your dreams come true </h1>
     <h6>Build your own unique desktop PC with us!</h6>
   </div>
 </section>
