--- a/Client/Angular/src/styles.scss
+++ b/Client/Angular/src/styles.scss
@@ -7,6 +7,9 @@
 
 body {
   background-image: url("https://images.unsplash.com/photo-1606963060170-09c3c2d12b71?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .text-yellow {
