--- a/Client/Angular/src/app/app.component.html
+++ b/Client/Angular/src/app/app.component.html
@@ -1,34 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-sm bg-body-tertiary">
-    <div class="container-fluid ">
-
-      <a class="navbar-brand text-yellow" routerLink="/">myConfix</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item text-yellow">
-            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-yellow" routerLink="/hardwares">Hardwares</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-yellow" routerLink="/builder">Builder</a>
-          </li>
-        </ul>
-        
-        <div class="float-start nav-item">
-          <a class="nav-link text-yellow" routerLink="/login">Login</a>
-        </div>
-      </div>
-
-
-    </div>
-  </nav>
+  <app-navbar></app-navbar>
+  <div class="mb-5"></div>
 </header>
 
 <router-outlet></router-outlet>
