--- a/Client/Angular/src/app/app.component.scss
+++ b/Client/Angular/src/app/app.component.scss
@@ -1,7 +1,9 @@
-nav {
-  box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.15);
-}
 
-.text-yellow {
-  color: rgba(255, 255, 0, 0.5);
+
+app-navbar {
+  width: 100%;
+  // position: sticky;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
