--- a/Client/Angular/src/app/app.component.html
+++ b/Client/Angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <app-navbar></app-navbar>
-  <div class="mb-5"></div>
+  <!-- <div class="mb-5"></div> -->
 </header>
 
 <router-outlet></router-outlet>
