--- a/Client/Angular/src/app/components/builder/builder.component.html
+++ b/Client/Angular/src/app/components/builder/builder.component.html
@@ -1,1 +1,45 @@
-<p>builder works!</p>
+<h2 class="text-center text-yellow mb-5">PC Builder</h2>
+
+<button (click)="create()" class="btn btn-outline-info d-block mx-auto my-2">Build a new PC</button>
+
+<div class="form-wrapper d-flex container justify-content-center align-items-center">
+  <form class="p-5 text-yellow opacity-75">
+
+    <div class="mb-3 form-group-row" *ngFor="let category of categories; index as i">
+      <label class="col-form-label me-2" >
+        {{category}}
+        <select class="form-control-sm form-select" [name]='category' [value]='category'>
+          <!-- <option selected disabled hidden></option> -->
+          <option [disabled]="true" [selected]="true" [hidden]="true">Select a {{category}}</option>
+          
+          <ng-container *ngFor="let hardware of hardwares; index as j">
+            <option *ngIf="hardware.category === categories[i]" [value]="hardware.name">
+              {{hardware.name}}
+            </option>
+          </ng-container>
+          
+        </select>
+      </label>
+      <button class="btn btn-success">+</button>
+
+    </div>
+
+<!-- <label>
+        Memória:
+      <select [(ngModel)]="selectedMemory">
+        <option *ngFor="let memory of memories" [value]="memory.id">{{ memory.name }}</option>
+      </select>
+    </label> -->
+
+    
+    <!-- <button type="button" (click)="addToConfig()">Add to Configuration</button> -->
+  </form>
+</div>
+
+
+
+  <br>
+  <h3>Added to Configuration:</h3>
+  <ul>
+    <!-- <li *ngFor="let item of addedItems">{{ item.name }}</li> -->
+  </ul>
