--- a/Client/Angular/src/app/components/home/home.component.html
+++ b/Client/Angular/src/app/components/home/home.component.html
@@ -1,11 +1,11 @@
-<section class="hero-wrapper d-flex align-items-center justify-content-center mb-5">
+<section class="hero-wrapper d-flex align-items-center justify-content-center mb-2">
   <div class="mx-5 text-center text-yellow text-center">
     <h1 class="title">Let your dreams come true </h1>
     <h6>Build your own unique desktop PC with us!</h6>
   </div>
 </section>
 
-<section class="container mb-5">
+<section class="container mb-3">
   <div class="row row-cols-1 row-cols-md-3 g-4">
 
     <div class="col">
@@ -16,7 +16,7 @@
         <div class="card-body">
           <h5 class="card-title">Browse hardwares</h5>
           <p class="card-text">Select from our collection of the best desktop computer components!</p>
-          <a routerLink="/" class="btn btn-dark">Hardwares</a>
+          <a routerLink="/hardwares" class="btn btn-dark">Hardwares</a>
         </div>
       </div>
     </div>
