--- a/Client/Angular/src/app/components/admin/hardwares/hardwares.component.html
+++ b/Client/Angular/src/app/components/admin/hardwares/hardwares.component.html
@@ -9,7 +9,7 @@
         <th scope="col">Name</th>
         <th scope="col">Category</th>
         <th scope="col">More info</th>
-        <th scope="col">Actions</th>
+        <!-- <th scope="col">Actions</th> -->
       </tr>
     </thead>
 
@@ -24,12 +24,12 @@
             More
           </button>
         </td>
-        <td>
+        <!-- <td>
           <div class="btn-group">
             <button class="btn btn-warning">Up</button>
             <button class="btn btn-danger">Del</button>
           </div>
-        </td>
+        </td> -->
       </tr>
     </tbody>
   </table>
