--- a/Client/Angular/src/app/components/home/home.component.scss
+++ b/Client/Angular/src/app/components/home/home.component.scss
@@ -9,6 +9,7 @@
   height: 500px;
   // width: 96vw;
   position: relative;
+  top: -2.5em;
   margin: 0 auto;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.75);
 
