--- a/Client/Angular/src/app/components/login/login.component.html
+++ b/Client/Angular/src/app/components/login/login.component.html
@@ -1,25 +1,29 @@
 <div class="form-wrapper d-flex container justify-content-center align-items-center">
 
-  <form class="p-5 text-yellow opacity-75">
+  <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()"
+    class="p-5 text-yellow opacity-75"
+  >
 
     <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+      <label for="email" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="email" formControlName="email">
     </div>
     <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+      <label for="password" class="form-label">Password</label>
+      <input type="password" class="form-control" id="password" formControlName="password">
     </div>
-    <div class="mb-3 form-check">
+    <!-- <div class="mb-3 form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
+    </div> -->
     
     <button type="submit" class="btn btn-secondary">
       Login
     </button>
 
-    <div class="pt-5">Don't have an account? <span class="fw-bold"><a routerLink="/signup">Sign up now!</a></span></div>
+    <div class="pt-5">
+      Don't have an account? <span class="fw-bold"><a routerLink="/signup">Sign up now!</a></span>
+    </div>
 
   </form>
 
