--- a/Client/Angular/src/app/components/navbar/navbar.component.html
+++ b/Client/Angular/src/app/components/navbar/navbar.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item">
           <a class="nav-link text-yellow" routerLink="/builder">Builder</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-yellow" routerLink="/myconfigs">My configs</a>
+        </li>
       </ul>
       
       <div class="float-start nav-item">
