--- a/Client/Angular/src/app/components/login/login.component.html
+++ b/Client/Angular/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
-<h3 class="text-yellow text-center">Login</h3>
 
 <div class="form-wrapper d-flex container justify-content-center align-items-center">
-
+  
   <form *ngIf="loginForm" [formGroup]="loginForm" (ngSubmit)="onSubmit()"
-    class="p-5 text-yellow opacity-75"
+  class="p-5 text-yellow opacity-75"
   >
+  <h3 class="text-yellow text-center mb-5">Login</h3>
 
     <div *ngIf="email" class="mb-3">
       <label for="email" class="form-label">Email address</label>
