Client: ng build, env.url updated. running on:3000

--- a/Client/Angular/src/app/components/admin/hardwares/hw-details/hw-details.component.html
+++ b/Client/Angular/src/app/components/admin/hardwares/hw-details/hw-details.component.html
@@ -15,7 +15,7 @@
 
 <!-- <ng-container #infoModal *ngIf="hardware"> -->
 <div class="modal fade" id="infoModal" tabindex="-1" aria-labelledby="infoModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
+  <div class="modal-dialog modal-dialog-centered modal-md">
     <div class="modal-content ">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="infoModalLabel">{{hardware?.name}}</h1>
