--- a/Client/Angular/src/app/components/myconfigs/myconfigs.component.html
+++ b/Client/Angular/src/app/components/myconfigs/myconfigs.component.html
@@ -1,15 +1,16 @@
-<div class="container">
-  <div class="row row-cols-md-4 grid gap-3 justify-content-evenly ">
+<div *ngIf="configs" class="container">
+  <div class="row row-cols-md-3 row-cols-lg-4 grid gap-3 justify-content-evenly ">
     <!-- <div  class="col"> -->
 
-      <div *ngFor="let config of configs" class="card">
+      <!-- <ng-tempate></ng-tempate> -->
+      <div *ngFor="let config of configs; index as i" class="card shadow">
         <div class="card-header">
-          <img src="https://source.unsplash.com/random/800x800/?computer" class="card-img-top" alt="computer">
-          <a [routerLink]="[config.id]" class="btn btn-warning shadow">Update</a>
+          <img src="https://source.unsplash.com/random/800x600/?gaming+computer {{ [i] }}" class="card-img-top" alt="computer">
+          <a [routerLink]="[config._id]" class="btn btn-warning shadow">Update</a>
         </div>
           <div class="card-body mx-auto">
               <ul class="mx-0 px-0">
-                <li>Config ID: {{ config.id }}</li>
+                <li>Config ID: {{ config._id }}</li>
                 <li title="Case">{{ config.case }}</li>
                 <li title="CPU">{{ config.cpu }}</li>
                 <li title="GPU">{{ config.gpu }}</li>
