--- a/Client/Angular/src/app/components/navbar/navbar.component.html
+++ b/Client/Angular/src/app/components/navbar/navbar.component.html
@@ -21,9 +21,12 @@
         <li class="nav-item">
           <a class="nav-link text-yellow" routerLink="/myconfigs">My configs</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf="user && user.email" >{{user.email}}</a>
+        </li>
       </ul>
       
-      <div class="float-start nav-item">
+      <div *ngIf="!user" class="float-start nav-item">
         <a class="nav-link text-yellow" routerLink="/login">Login</a>
       </div>
     </div>
