--- a/Client/Angular/src/app/components/myconfigs/myconfigs.component.html
+++ b/Client/Angular/src/app/components/myconfigs/myconfigs.component.html
@@ -10,7 +10,7 @@
         </div>
           <div class="card-body mx-auto">
               <ul class="mx-0 px-0">
-                <li>Config ID: {{ config._id }}</li>
+                <li>Config ID: <small>{{ config._id }}</small></li>
                 <li title="Case">{{ config.case }}</li>
                 <li title="CPU">{{ config.cpu }}</li>
                 <li title="GPU">{{ config.gpu }}</li>
