--- a/Client/Angular/src/app/components/myconfigs/myconfigs.component.html
+++ b/Client/Angular/src/app/components/myconfigs/myconfigs.component.html
@@ -3,7 +3,7 @@
     <!-- <div  class="col"> -->
 
       <!-- <ng-tempate></ng-tempate> -->
-      <div *ngFor="let config of configs; index as i" class="card shadow">
+      <div *ngFor="let config of configs | async; index as i" class="card shadow">
         <div class="card-header">
           <img src="https://source.unsplash.com/random/800x600/?gaming+computer {{ [i] }}" class="card-img-top" alt="computer">
           <a [routerLink]="[config._id]" class="btn btn-warning shadow">Update</a>
