--- a/Client/Angular/src/app/components/builder/builder.component.html
+++ b/Client/Angular/src/app/components/builder/builder.component.html
@@ -6,7 +6,8 @@
     <div class="col">
       <div class="p-4 form-wrapper  justify-content-center align-items-center">
 
-        <form *ngIf="configForm" [formGroup]="configForm" (ngSubmit)="create()" class=" text-yellow opacity-75">
+        <!-- <form *ngIf="configForm" [formGroup]="configForm" (ngSubmit)="create()" class=" text-yellow opacity-75"> -->
+        <form *ngIf="configForm" [formGroup]="configForm" (ngSubmit)="createConfigToUser()" class=" text-yellow opacity-75">
           <div class="mb-2 form-group-row" *ngFor="let category of categories; index as i">
             <label [for]="category.toLowerCase()" class="col-form-label me-2">
               {{category}}
@@ -23,8 +24,7 @@
               </select>
             </label>
           </div>
-          <!-- <button type="button" (click)="addToConfig()">Add to Configuration</button> -->
-          <button class="btn btn-outline-info d-block mx-auto">Build a new PC</button>
+          <button type="submit" class="btn btn-outline-info d-block mx-auto">Build a new PC</button>
         </form>
 
       </div>
