--- a/Client/Angular/src/app/components/users/users.component.html
+++ b/Client/Angular/src/app/components/users/users.component.html
@@ -16,7 +16,7 @@
       <tr #eachHardware *ngFor="let user of users; index as i">
         <th scope="row">{{i+1}}.</th>
         <td>{{user.email}}</td>
-        <td>{{user.username}}</td>
+        <!-- <td>{{user.username}}</td> -->
         <td>{{user?._id}}</td>
         <!-- <td>
           <button (click)="showMoreInfo(user.name)" class="btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#infoModal" data-backdrop="false"
