--- a/Client/Angular/src/app/components/myconfigs/config-details/config-details.component.html
+++ b/Client/Angular/src/app/components/myconfigs/config-details/config-details.component.html
@@ -2,7 +2,8 @@
   <h2>Update config {{currentConfig._id}}</h2>
 
   <div class="p-4 form-wrapper ">
-    <form *ngIf="detailsForm" [formGroup]="detailsForm" (ngSubmit)="update(currentConfig._id, detailsForm.value)" class=" text-yellow opacity-75">
+    <!-- <form *ngIf="detailsForm" [formGroup]="detailsForm" (ngSubmit)="update(configId, currentConfig)" class=" text-yellow opacity-75"> -->
+    <form *ngIf="detailsForm && userId && configId" [formGroup]="detailsForm" (ngSubmit)="updateMyConfig(userId, configId, detailsForm.value)" class=" text-yellow opacity-75">
       
       <div class="mb-2 form-group-row" *ngFor="let category of categories; index as i">
         
@@ -11,7 +12,7 @@
           <select class="form-control-sm form-select" 
           [id]="category.toLowerCase()" [formControlName]="category.toLowerCase()" [name]="category" [value]="category"
           >
-          <option [disabled]="true" [selected]="true" [hidden]="true" [defaultSelected]="true">
+          <option [value]="category | titlecase" [disabled]="true" [selected]="true" [hidden]="true">
             Select a {{category}}
           </option>
           
@@ -26,9 +27,11 @@
 
     </div>
     
-    <button class="btn btn-outline-info">Update</button>
-    <!-- <button (click)="update(currentConfig)" class="btn btn-outline-info">Update</button> -->
-    <button (click)="delete(currentConfig._id)" class="btn btn-outline-danger ms-2">Delete</button>
+    <button type="submit" class="btn btn-outline-info">Update</button>
+    <!-- <button type="button" *ngIf="userId && configId" (click)="delete(configId)" class="btn btn-outline-danger ms-2"> -->
+    <button type="button" *ngIf="userId && configId" (click)="deleteMyConfig(userId, configId)" class="btn btn-outline-danger ms-2">
+      Delete
+    </button>
   </form>
 </div>
 
