--- a/Client/Angular/src/styles.scss
+++ b/Client/Angular/src/styles.scss
@@ -10,6 +10,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 100vw;
 }
 
 .text-yellow {
