--- a/Server/public/angular/styles.css
+++ b/Server/public/angular/styles.css
@@ -12,6 +12,7 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  max-width: 100vw;
 }
 .text-yellow {
   color: rgba(255, 255, 0, 0.8);
